--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2.2.6",
+    "lucide-react": "^0.503.0",
     "next": "^15.3.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
